--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ django-debug-toolbar = "^3.8.1"
 django-extensions = "^3.2.1"
 black = "^22.12.0"
 isort = "^5.11.4"
+pytest-django = "^4.5.2"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
