--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[tool.black]
+line-length = 90
+skip-string-normalization = true
+
+
 [tool.poetry]
 name = "backend-coding-challenge-django"
 version = "0.1.0"
