--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ black = "^22.12.0"
 isort = "^5.11.4"
 pytest-django = "^4.5.2"
 pytest = "^7.2.0"
+django-stubs = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core"]
