--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 django-debug-toolbar==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
 django-extensions==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
+django-stubs-ext==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+django-stubs==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 django==4.1.5 ; python_version >= "3.10" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.1.0 ; python_version >= "3.10" and python_version < "3.11"
@@ -29,7 +31,9 @@ pytest-django==4.5.2 ; python_version >= "3.10" and python_version < "4.0"
 pytest==7.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2022.7 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.4.3 ; python_version >= "3.10" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.10" and python_full_version < "3.11.0a7"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "4.0"
+types-pytz==2022.7.0.0 ; python_version >= "3.10" and python_version < "4.0"
+types-pyyaml==6.0.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2022.7 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 wmctrl==0.4 ; python_version >= "3.10" and python_version < "4.0"
